[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Player_.tscn" type="PackedScene" id=1]
[ext_resource path="res://fondo_cielo_a.jpg" type="Texture" id=2]
[ext_resource path="res://wordl/M_D1.gd" type="Script" id=3]
[ext_resource path="res://Fuentes/Grinched 2.0.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://wordl/CanvasLayer.gd" type="Script" id=5]
[ext_resource path="res://wordl/Barreras.gd" type="Script" id=6]
[ext_resource path="res://Musica/musica juego.ogg" type="AudioStream" id=7]
[ext_resource path="res://sonof.png" type="Texture" id=8]
[ext_resource path="res://son.png" type="Texture" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1030.59, -77.3546, 0, 0, 0, 0, 1058.28, -131.246, 0, 0, 0, 0, 1076.32, -34.6143, 0, 0, 0, 0, 1080.32, 72.2583, 0, 0, 0, 0, 1067.61, 202.779, 0, 0, 0, 0, 1071.43, 292.946, 0, 0, 0, 0, 1047.37, 420.299, 0, 0, 0, 0, 1045.18, 488.555, 0, 0, 0, 0, 1044.25, 531.759, 0, 0, 0, 0, 1029.57, 585.86, 0, 0, 0, 0, 1063.46, 597.162, 0, 0, 0, 0, 1086.13, 588.689, 0, 0, 0, 0, 1078.9, 511.053, 0, 0, 0, 0, 1074.42, 459.498, 0, 0, 0, 0, 1063.75, 358.803, 0, 0, 0, 0, 1042.29, 243.806, 0, 0, 0, 0, 1026.18, 122.43, 0, 0, 0, 0, 1025.89, 9.60138 )
}

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 44
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 137.654, 26.9031 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 276.03, 165.593 )

[node name="M_D1" type="Node2D" groups=[
"Globos",
]]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="fondo_cielo_a" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 511.036, 299.248 )
scale = Vector2( 1.69263, 1.46078 )
texture = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="globo_timer" type="Timer" parent="."]
autostart = true

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 853.125, -382.698 )
rotation = 1.58378
scale = Vector2( 0.959759, 1.40175 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1030.59, -77.3546 )
rotation = -1.09614

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="puntos" type="Label" parent="CanvasLayer" groups=[
"puntos",
]]
margin_right = 99.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiempo" type="Label" parent="CanvasLayer" groups=[
"tiempo",
]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -83.0547
margin_right = -38.0547
margin_bottom = 18.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pausa" type="Button" parent="CanvasLayer"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -58.1379
margin_top = 9.62155
margin_right = 55.8621
margin_bottom = 61.6216
custom_fonts/font = SubResource( 4 )
text = "Pausa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 230.405
margin_top = 8.40895
margin_right = 486.405
margin_bottom = 264.409
rect_scale = Vector2( 0.33604, 0.298771 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer"]
margin_left = 336.358
margin_top = 6.72717
margin_right = 848.358
margin_bottom = 518.727
rect_scale = Vector2( 0.162802, 0.153717 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Barreras" type="Area2D" parent="." groups=[
"barreras",
]]
position = Vector2( 859.489, -10.2722 )
rotation = -3.13336
scale = Vector2( 0.557853, 0.158637 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Barreras"]
position = Vector2( -47.4278, 82.4069 )
rotation = -0.00451851
scale = Vector2( 0.839688, 1.48984 )
frames = SubResource( 5 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Barreras"]
position = Vector2( -39.4031, -4208.96 )
rotation = -0.0160495
scale = Vector2( 0.922789, 2.70518 )
frames = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barreras"]
position = Vector2( -37.6816, -48.8744 )
rotation = 3.11263
scale = Vector2( 1.79328, 6.30352 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Barreras"]
position = Vector2( -34.5359, -3822.31 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=[
"bgm",
]]
stream = ExtResource( 7 )
volume_db = -7.0
autoplay = true

[connection signal="timeout" from="globo_timer" to="." method="_timer_MD1"]
[connection signal="pressed" from="CanvasLayer/pausa" to="CanvasLayer" method="_on_pausa_pressed"]
[connection signal="button_down" from="CanvasLayer/TextureButton" to="CanvasLayer" method="_on_TextureButton_button_down"]
[connection signal="button_down" from="CanvasLayer/TextureButton2" to="CanvasLayer" method="_on_TextureButton2_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
